<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Serviam</string>
    <string name="selecciona_agrupacion">Seleccioná tu agrupación</string>
    <string name="halcones">Halcones de la\nCruz del Sur</string>
    <string name="a_halcones">Agrupación Halcones de la Cruz del Sur</string>
    <string name="santa_juana">Santa Juana de Arco</string>
    <string name="agrupacion">Agrupación</string>
    <string name="serviam">SERVIAM</string>
    <string name="asociacion">ASOCIACIÓN CIVIL SERVIAM</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="bienvenida">BIENVENIDA</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrate">¿Primera vez? Registrate</string>
    <string name="volver_seleccion">Volver a la selección</string>
    <string name="hint_dni">Ingresá tu DNI</string>
    <string name="hint_contrasena">●●●●●●●●●●</string>
    <string name="recordarme">Recordarme</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="repetir_contrasena">Repetí la contraseña</string>
    <string name="dni_no_registrado">Si tu DNI no está registrado, hablá con tu Capitán</string>
    <string name="tesoro_espiritual">Tesoro Espiritual</string>
    <string name="chicos">Chicos</string>
    <string name="por_brigada">Por brigada</string>
    <string name="inventario">Inventario</string>
    <string name="calendario">Calendario</string>
    <string name="materiales">Materiales</string>
    <string name="campamento">Campamento Activo</string>
    <string name="flecha_derecha">›</string>
    <string name="flecha_izquierda">‹</string>
</resources>