<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActivity"
    android:background="#252525">
    
    <ImageView
        android:id= "@+id/logoServiam"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src= "@drawable/logo_serviam"/>

    <TextView
        android:id="@+id/textServiam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serviam"
        android:textColor="@color/blanco"
        android:textSize="32sp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoServiam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textSeleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_agrupacion"
        android:textColor="#929292"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textServiam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-8dp"/>


    <androidx.cardview.widget.CardView
        android:id = "@+id/cardHalcones"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSeleccion"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/color_halcones">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="14dp">

            <ImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:src="@drawable/logo_halcones"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agrupacion"
                    android:textColor="@color/blanco"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/halcones"
                    android:textColor="@color/blanco"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flecha"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:alpha="0.6"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id = "@+id/cardJuanas"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHalcones"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/color_juanas">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="14dp">

            <ImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:src="@drawable/logo_juanas"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agrupacion"
                    android:textColor="@color/blanco"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/santa_juana"
                    android:textColor="@color/blanco"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flecha"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:alpha="0.6"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id = "@+id/cajaAsociacion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1B1B1B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asociacion"
            android:textColor="#474747"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:layout_marginTop="-4dp"
            />
        
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>